Modified the javascript file

--- a/contact.html
+++ b/contact.html
@@ -79,5 +79,9 @@
         </div>
         <p>&copy; Blaque stores 2025</p>
     </footer>
+    <!-- Back to top button -->
+    <a href="#" class="back-to-top" onclick="scrollToTop()">
+        <i class="fas fa-arrow-up"></i>
+    </a>
 </body>
 </html>
