--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             <p>&copy; Blaque stores 2025</p>
         </div>
     </footer>
+    <!-- Back to top button -->
+<a href="#" class="back-to-top" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+</a>
 </body>
 </html>
 <!-- contact us form name phone no email address, image link for fb, x, twitter,wa. Different pages location, map-->
