--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
                 <li>Racket games equipments</li>
             </ol>
         </section>
-
+        <!-- Football -->
         <h2>Football</h2>
         <div class="image-container">
             <img src="51VeOIMxm1S.jpg" alt="Football" width="300" height="300">
@@ -48,27 +48,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr onclick="showPurchaseModal('Adidas League Football', '6,500')">
                     <td>Adidas League Football</td>
                     <td>Official match ball (Size 5)</td>
                     <td class="price">6,500</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Nike Strike Football', '4,200')">
                     <td>Nike Strike Football</td>
                     <td>Training ball (Size 5)</td>
                     <td class="price">4,200</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Football Shin Guards', '1,800')">
                     <td>Football Shin Guards</td>
                     <td>Pair of plastic shin guards</td>
                     <td class="price">1,800</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Goalkeeper Gloves', '3,500')">
                     <td>Goalkeeper Gloves</td>
                     <td>Professional latex palms</td>
                     <td class="price">3,500</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Football Boots (Mid-range)', '8,900')">
                     <td>Football Boots (Mid-range)</td>
                     <td>Firm ground studs</td>
                     <td class="price">8,900</td>
@@ -77,6 +77,7 @@
         </table>
 
         <br>
+        <!-- Basket ball -->
         <h2>Basket ball</h2>
         <div class="image-container">
             <img src="8ae1d849e0bb14fe92967fb3d27288ff.jpg" alt="Basket ball" width="300" height="300">
@@ -94,27 +95,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr onclick="showPurchaseModal('Spalding NBA Official Game Ball', '9,800')">
                     <td>Spalding NBA Official Game Ball</td>
                     <td>Leather composite (Size 7)</td>
                     <td class="price">9,800</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Wilson Evolution Basketball', '7,500')">
                     <td>Wilson Evolution Basketball</td>
                     <td>Composite leather (Size 6)</td>
                     <td class="price">7,500</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Basketball Hoop & Net', '45,000')">
                     <td>Basketball Hoop & Net</td>
                     <td>Portable system with stand</td>
                     <td class="price">45,000</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Basketball Jersey', '3,200')">
                     <td>Basketball Jersey</td>
                     <td>Replica team jersey</td>
                     <td class="price">3,200</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Basketball Shoes', '12,000')">
                     <td>Basketball Shoes</td>
                     <td>Mid-range performance shoes</td>
                     <td class="price">12,000</td>
@@ -122,6 +123,7 @@
             </tbody>
         </table>
         <br>
+        <!-- Volleyball -->
         <h2>Volleyball</h2>
         <div class="image-container">
             <img src="71XrYuxmKKL.jpg" alt="Volley Ball" width="300" height="300">
@@ -136,27 +138,27 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr onclick="showPurchaseModal('Mikasa MVA200 Volleyball', '8,900')">
                     <td>Mikasa MVA200 Volleyball</td>
                     <td>Official match ball</td>
                     <td class="price">8,900</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Wilson AVP Official Volleyball', '7,200')">
                     <td>Wilson AVP Official Volleyball</td>
                     <td>Beach volleyball</td>
                     <td class="price">7,200</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Volleyball Knee Pads', '2,500')">
                     <td>Volleyball Knee Pads</td>
                     <td>Pair of protective pads</td>
                     <td class="price">2,500</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Volleyball Net System', '32,000')">
                     <td>Volleyball Net System</td>
                     <td>Competition standard with poles</td>
                     <td class="price">32,000</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Volleyball Shoes', '10,500')">
                     <td>Volleyball Shoes</td>
                     <td>Court shoes with gum rubber soles</td>
                     <td class="price">10,500</td>
@@ -165,6 +167,7 @@
         </table>
 
         <br>
+        <!-- Rackets -->
         <h2>Racket Games</h2>
         <div class="image-container">
             <img src="61r74Jv-X2S._AC_UL300_SR300,200_.jpg" alt="Racket games" width="300" height="300">
@@ -181,32 +184,32 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr onclick="showPurchaseModal('Yonex Badminton Racket', '15,000')">
                     <td>Yonex Badminton Racket</td>
                     <td>Carbon fiber (ArcSaber 11)</td>
                     <td class="price">15,000</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Wilson Tennis Racket', '25,000')">
                     <td>Wilson Tennis Racket</td>
                     <td>Pro Staff RF97 (Federer)</td>
                     <td class="price">25,000</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Table Tennis Racket', '4,800')">
                     <td>Table Tennis Racket</td>
                     <td>Professional paddle with case</td>
                     <td class="price">4,800</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Badminton Shuttlecocks', '3,600')">
                     <td>Badminton Shuttlecocks</td>
                     <td>Yonex Aerosensa 30 (Tube of 12)</td>
                     <td class="price">3,600</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Tennis Balls (Can of 3)', '2,700')">
                     <td>Tennis Balls (Can of 3)</td>
                     <td>Wilson US Open Extra Duty</td>
                     <td class="price">2,700</td>
                 </tr>
-                <tr>
+                <tr onclick="showPurchaseModal('Squash Racket', '11,500')">
                     <td>Squash Racket</td>
                     <td>Dunlop Elite Pro</td>
                     <td class="price">11,500</td>
@@ -214,6 +217,27 @@
             </tbody>
         </table>
         <br>
+   <!-- Purchase Modal -->
+<div id="purchaseModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Purchase Confirmation</h3>
+        <p id="productDetails"></p>
+        <form id="paymentForm">
+            <label for="phone">M-Pesa Phone Number:</label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" 
+                   placeholder="07XXXXXXXX" required>
+            <button type="button" onclick="processPayment()">
+                Complete Payment via M-Pesa
+            </button>
+        </form>
+        <div id="paymentStatus"></div>
+    </div>
+</div>
+
+<a href="#" class="back-to-top" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+</a>
     </body>
     <footer>
         <p>&copy; Blaque stores 2025</p>
