Modified javascript file to enable the close button work

--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,8 @@
         <div class="social-media">
             <h3>Connect With Us</h3>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook-f social-icon"></i></a>
-                <a href="#"><i class="fab fa-twitter social-icon"></i></a>
-                <a href="#"><i class="fab fa-whatsapp social-icon"></i></a>
-                <a href="#"><i class="fab fa-instagram social-icon"></i></a>
+                <a href=" https://www.linkedin.com/in/brian-mwangi-a493a12a2/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.instagram.com/cytro254?igsh=MWM0b252am9xYXczNw=="><i class="fab fa-instagram"></i></a>
             </div>
         </div>
         <p>&copy; Blaque stores 2025</p>
