--- a/products.html
+++ b/products.html
@@ -234,7 +234,60 @@
         <div id="paymentStatus"></div>
     </div>
 </div>
+```html
+<!-- Add a CSS class to the image containers for better styling -->
+<div class="image-container grid-container">
+    <!-- Add alt text to the images for better accessibility -->
+    <img src="51VeOIMxm1S.jpg" alt="Football equipment" width="300" height="300">
+    <img src="Football 1.webp" alt="Football equipment" width="300" height="300">
+    <img src="Football 2.webp" alt="Football equipment" width="300" height="300">
+    <img src="Football 3.webp" alt="Football equipment" width="300" height="300">
+    <img src="Football 4.webp" alt="Football equipment" width="300" height="300">
+</div>
 
+<!-- Add a CSS class to the tables for better styling -->
+<table class="product-table">
+    <thead>
+        <tr>
+            <th>Item</th>
+            <th>Description</th>
+            <th>Price (KSH)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <!-- Add a CSS class to the table rows for better styling -->
+        <tr class="product-row" onclick="showPurchaseModal('Adidas League Football', '6,500')">
+            <td>Adidas League Football</td>
+            <td>Official match ball (Size 5)</td>
+            <td class="price">6,500</td>
+        </tr>
+        <!-- ... -->
+    </tbody>
+</table>
+
+<!-- Add a CSS class to the modal for better styling -->
+<div id="purchaseModal" class="modal modal-dialog">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h3>Purchase Confirmation</h3>
+        <p id="productDetails"></p>
+        <form id="paymentForm">
+            <label for="phone">M-Pesa Phone Number:</label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" 
+                   placeholder="07XXXXXXXX" required>
+            <button type="button" onclick="processPayment()">
+                Complete Payment via M-Pesa
+            </button>
+        </form>
+        <div id="paymentStatus"></div>
+    </div>
+</div>
+
+<!-- Add a CSS class to the back-to-top link for better styling -->
+<a href="#" class="back-to-top btn btn-primary" onclick="scrollToTop()">
+    <i class="fas fa-arrow-up"></i>
+</a>
+```
 <a href="#" class="back-to-top" onclick="scrollToTop()">
     <i class="fas fa-arrow-up"></i>
 </a>
