Updated the javascript and fixed the map section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     <header>
         <h1>Welcome to Blaque Stores</h1>
         <nav>
-            <a href="products.html">
-                <i class="fas fa-shopping-bag"></i> Products
-            </a>
-            <a href="contact.html">
-                <i class="fas fa-envelope"></i> Contact
-            </a>
+            <div class="hamburger" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="nav-links" id="navLinks">
+                <a href="products.html">
+                    <i class="fas fa-shopping-bag"></i> Products
+                </a>
+                <a href="contact.html">
+                    <i class="fas fa-envelope"></i> Contact
+                </a>
+            </div>
         </nav>
     </header>
 
