--- a/contact.html
+++ b/contact.html
@@ -12,22 +12,28 @@
     <header>
         <h1>Contact Blaque Stores</h1>
         <nav>
-            <a href="index.html">
-                <i class="fas fa-home"></i> Home
-            </a>  
-            <a href="products.html">
-                <i class="fas fa-shopping-bag"></i> Products
-            </a>
+            <div class="hamburger" onclick="toggleMenu()">
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="nav-links" id="navLinks">
+                <a href="index.html">
+                    <i class="fas fa-home"></i> Home
+                </a>
+                <a href="products.html">
+                    <i class="fas fa-shopping-bag"></i> Products
+                </a>
+            </div>
         </nav>
     </header>
 
-    <section id="contact" class="contact section">
+    <section id="contact" class="contact-section">
         <div class="container">
-            <div class="section-title padd-15">
+            <div class="section-header">
                 <h2><i class="fas fa-envelope"></i> Contact Us</h2>
             </div>
-            <div class="row">
-                <div class="contact-form-container padd-15">
+            
+            <div class="contact-content">
+                <div class="contact-form-container">
                     <form class="contact-form">
                         <div class="form-group">
                             <input type="text" placeholder="Full Name" required>
@@ -39,44 +45,43 @@
                             <input type="tel" placeholder="Phone Number" pattern="[0-9]{10}" required>
                         </div>
                         <div class="form-group">
-                            <textarea placeholder="Your Message" rows="6" required></textarea>
+                            <textarea placeholder="Your Message" rows="5" required></textarea>
                         </div>
-                        <div class="form-submit">
-                            <button type="submit" class="btn">
-                                <i class="fas fa-paper-plane"></i> Send Message
-                            </button>
-                        </div>
+                        <button type="submit" class="btn submit-btn">
+                            <i class="fas fa-paper-plane"></i> Send Message
+                        </button>
                     </form>
                 </div>
-            </div>
-        </form>
-    </div>
-    <br><br>
-    <header>
-        <h3>Our Location</h3>
-    </header>
 
-    <div class="map-container">
-        <h4>Find Us Here</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13788.4851551457!2d37.264490504790224!3d-1.5298637771203694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f8724f42e161f%3A0xaf5f3242fb4d6ecb!2sMachakos%20University!5e0!3m2!1sen!2ske!4v1744105444911!5m2!1sen!2ske"
-                width="100%" 
-                height="450" 
-                frameborder="0" 
-                style="border:0" 
-                allowfullscreen>
-        </iframe>
-    </div>
+                <div class="map-container">
+                    <h3><i class="fas fa-map-marker-alt"></i> Our Location</h3>
+                    <div class="map-wrapper">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13788.4851551457!2d37.264490504790224!3d-1.5298637771203694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f8724f42e161f%3A0xaf5f3242fb4d6ecb!2sMachakos%20University!5e0!3m2!1sen!2ske!4v1744105444911!5m2!1sen!2ske"
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="social-media">
             <h3>Connect With Us</h3>
             <div class="social-icons">
-                <a href=" https://www.linkedin.com/in/brian-mwangi-a493a12a2/"><i class="fab fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/cytro254?igsh=MWM0b252am9xYXczNw=="><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/brian-mwangi-a493a12a2/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com/cytro254" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </div>
         </div>
         <p>&copy; Blaque stores 2025</p>
     </footer>
+
     <!-- Back to top button -->
     <a href="#" class="back-to-top" onclick="scrollToTop()">
         <i class="fas fa-arrow-up"></i>
