Modified the unordered list on the homepage

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
         <h4><i class="fas fa-bullseye"></i> Our Mission</h4>
         <ul>
-            <li><i class="fas fa-check"></i> Provide exceptional customer service</li>
-            <li><i class="fas fa-check"></i> Offer quality sports equipment</li>
-            <li><i class="fas fa-check"></i> Support local athletes</li>
-            <li><i class="fas fa-check"></i> Continuously improve services</li>
+            <li> Provide exceptional customer service</li>
+            <li> Offer quality sports equipment</li>
+            <li> Support local athletes</li>
+            <li> Continuously improve services</li>
         </ul>
 
         <h4><i class="fas fa-history"></i> Our Story</h4>
