Upated the location section

--- a/products.html
+++ b/products.html
@@ -240,7 +240,7 @@
     </div>
 </div>
 
-<!-- Add a CSS class to the modal for better styling -->
+<!-- Purchase Simulation -->
 <div id="purchaseModal" class="modal modal-dialog">
     <div class="modal-content">
         <span class="close">&times;</span>
@@ -258,7 +258,7 @@
     </div>
 </div>
 
-<!-- Add a CSS class to the back-to-top link for better styling -->
+<!-- back to top -->
 <a href="#" class="back-to-top btn btn-primary" onclick="scrollToTop()">
     <i class="fas fa-arrow-up"></i>
 </a>
